index.css
* {
  color: white;
  font-family: Verdana, sans-serif;
  font-style: bold;
}

html {
  background-color: #222222;
}

body {
  padding: 10px;
}

.topnav {
  overflow: hidden;
  background-color: #222222;
}

.topnav a {
  float: left;
  color: #f3f3f3;
  text-align: center;
  padding: 14px 17px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #eeeeee;
  color: black;
}

.topnav a.active {
  background-color: #3357d6;
  color: white;
}

iframe {
  width: auto;
  height: auto;
}

